image post & privacy text
新增私信和post图片上传功能